--- a/style.css
+++ b/style.css
@@ -1,5 +1,62 @@
-.container {
-	width: 800px;
-	box-shadow: -10px 0px 10px 1px #aaaaaa;
+/* typo */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
+
+h1 {
+	color: #DB0038;
 }
 
+h2 { 
+	color:  #3998A3 ;
+}
+
+h3 {
+	color:  #474747;
+}
+
+.blackstar, .whitestar  {
+	color: #F4B400;
+	font-size: 25px;
+}
+
+
+
+/* LAYOUT & COLORS */
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	margin: 0;
+}
+
+.container {
+	width: 800px;
+	margin: 0 auto;
+	box-shadow: 0px 10px 10px 3px #aaaaaa;
+	padding:  0 50px 0 50px;
+}
+
+p, li {
+	color: #707070;
+}
+
+header {
+	text-align: center;
+}
+
+
+.hero {
+	background: #f4f4f4;
+	text-align: center;
+	padding:  0 0 10px;
+}
+
+li { 
+	padding: 5px 0 5px;
+ }
+
+ .rating {
+ 	text-align: center;
+ }
+
+ footer {
+ 	text-align: center;
+ }
