--- a/ex3/CSS3_Day2_Advanced_Exercises.css
+++ b/ex3/CSS3_Day2_Advanced_Exercises.css
@@ -5,8 +5,9 @@ header {
 	padding: 20px 20px 20px 20px;
 }
 .container {
-	width: 1000px;
+	max-width: 1000px;
 	margin: 0 auto;
+	width: 100%;
 }
 ul {
 	text-align: center;
@@ -24,12 +25,21 @@ li {
 }
 
 
-section {
-	display: inline;
+.columns {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.column {
 	background-color: lightgrey;
-	text-align: center;
-	width: 33%;
+	flex: 1;
 	padding: 10px;
+}
+
+.col-middle {
+	margin: 0 10px 0 10px;
 }
 
 p {
@@ -40,6 +50,10 @@ p {
 }
 
 footer {
+	width: 100%;
+	margin: 25px 0;
+	clear: both;
 	text-align: center;
 	background-color: lightgrey;
+	float: left;
 }
